# LogConverter

./: CMakeLists.txt  README.md  install.nsi  license.txt  logconverter.cpp  logconverter.h  main.cpp
.github/workflows/: macintosh.yml  windows.yml
resources/: launcher.rc
